k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hexabase-docs
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: docs.hexabase.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hexabase-docs
            port:
              number: 80
